separate feed list to its own page
